src/objects/Fielo_Autorizacion_LifeMiles__c.object
<CustomObject>
    <fields>
        <fullName>F_AutorizacionLMPadre__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Autorización LM Padre</label>
        <referenceTo>Fielo_Autorizacion_LifeMiles__c</referenceTo>
        <relationshipLabel>Autorizacións LifeMiles</relationshipLabel>
        <relationshipName>Autorizaci_ns_LifeMiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_CodigoRespuestaLM__c</fullName>
        <label>Código Respuesta LM</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Estado__c</fullName>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pendiente</fullName>
                </value>
                <value>
                    <fullName>Aprobado</fullName>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                </value>
                <value>
                    <fullName>Revertido</fullName>
                </value>
                <value>
                    <fullName>Reintentar</fullName>
                </value>
                <value>
                    <fullName>Cancelado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F_IdTransaccion__c</fullName>
        <label>Id Transacción</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>FieloPLT__Member__c</referenceTo>
        <relationshipLabel>Autorizaciones LifeMiles</relationshipLabel>
        <relationshipName>Autorizaciones_LifeMiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_MillasBase__c</fullName>
        <label>Millas Base</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_MillasBonus__c</fullName>
        <label>Millas Bonus LM</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_MillasPromocionales__c</fullName>
        <label>Millas Promocionales</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_MontoTransaccion__c</fullName>
        <description>Monto en dinero de la transacción</description>
        <inlineHelpText>Monto en dinero de la transacción</inlineHelpText>
        <label>Monto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F_MotivoRechazo__c</fullName>
        <label>Motivo de Rechazo</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_NumeroAutorizacionLM__c</fullName>
        <label>Numero Autorización LM</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_NumeroLifeMiles__c</fullName>
        <label>Número LifeMiles</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_ReintentosConexionLM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reintentos Conexión LM</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_TarjetaPreinscrita__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tarjeta Preinscrita</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FieloPLT__Member__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Fielo_TarjetaPreinscrita</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloPLT__Member__c</referenceTo>
        <relationshipLabel>Autorizacións LifeMiles (Tarjeta Preinscrita)</relationshipLabel>
        <relationshipName>Autorizacions_LifeMiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_TipoTransaccion__c</fullName>
        <label>Tipo de Transacción</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Crédito (C)</fullName>
                </value>
                <value>
                    <fullName>Débito (D)</fullName>
                </value>
                <value>
                    <fullName>Reversión (R)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F_Venta__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Venta</label>
        <referenceTo>Fielo_Venta__c</referenceTo>
        <relationshipLabel>Autorizaciónes LifeMiles</relationshipLabel>
        <relationshipName>Autorizaciones_LifeMiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Autorización LifeMiles</label>
    <listViews>
        <fullName>Fielo_All</fullName>
        <columns>NAME</columns>
        <columns>F_NumeroAutorizacionLM__c</columns>
        <columns>F_TipoTransaccion__c</columns>
        <columns>F_Estado__c</columns>
        <columns>F_Member__c</columns>
        <columns>F_MillasBase__c</columns>
        <columns>F_MillasPromocionales__c</columns>
        <columns>F_Venta__c</columns>
        <columns>F_TarjetaPreinscrita__c</columns>
        <columns>F_IdTransaccion__c</columns>
        <columns>F_CodigoRespuestaLM__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todas</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>LM-{0000000000}</displayFormat>
        <label># Autorización</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Autorizacións LifeMiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>